--- a/hesoid/landing.html
+++ b/hesoid/landing.html
@@ -25,11 +25,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6">
-					<a href=""><img src="images/logo-header.svg"></a>
+					<a href="#"><img src="images/logo-header.svg"></a>
 				</div>
 				<div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 align-self-center text-right">
-					<a href=""><i class="fas fa-bell text-white header-icon"></i></a>
-					<a href=""><i class="fas fa-user text-white header-icon ml-3"></i></a>
+					<a href="#"><i class="fas fa-bell text-white header-icon"></i></a>
+					<a href="#"><i class="fas fa-user text-white header-icon ml-3"></i></a>
 				</div>
 			</div>
 		</div>
@@ -49,126 +49,184 @@
 			</div>
 		</div>
 		<div class="row mt-3">
-			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 col-md-12 bg-white box p-5 recent-transit-box">
+			<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 col-md-12 bg-white box p-5 recent-transit-box custom-scrollbar overflow-auto">
 				<div class="row row-table">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
 				<div class="row row-table mt-3">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 text-left div-border p-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
 						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
 					</div>
-					<div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12 div-border p-3">
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
 						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
 					</div>
-					<div class="col-xl-5 col-lg-5 col-md-5 col-sm-12 col-12 text-left align-self-center p-3">
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
 						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
 						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
-						<button type="button" class="btn btn-sm bg-main-color text-white mt-2">Read More</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
 					</div>
 				</div>
+				<div class="row row-table mt-3">
+					<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left div-border p-3">
+						<p class="vertical-center-main">20/12/2019 - Le marche de la livraison a domicile: l'emergence des Ghost Kitchen: Ancien CFO at Uber France</p>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 div-border p-3">
+						<img class="image-icon w-75 vertical-center-main" src="images/logo_footer.svg">
+					</div>
+					<div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-12 text-left align-self-center div-border p-3">
+						<button type="button" class="btn btn-sm bg-main mt-2">Services au consommateur</button>
+						<button type="button" class="btn btn-sm bg-main mt-2">Deliveroo</button>
+						<button type="button" class="btn btn-sm bg-main mt-2">Uber</button>
+						<button type="button" class="btn btn-sm bg-main mt-2">Birdiz</button>
+						<button type="button" class="btn btn-sm bg-main mt-2">Ripayon</button>
+						<button type="button" class="btn btn-sm bg-main mt-2">Piwii</button>
+						<a href="#"><button type="button" class="btn btn-sm bg-main-color text-white mt-2">See More</button></a>
+					</div>
+					<div class="col-xl-1 col-lg-1 col-md-12 col-sm-12 col-12 p-3">
+						<div class="vertical-center-main justify-content-center read-more-arrow rounded-circle">
+							<i class="fas fa-long-arrow-alt-right vertical-center-main text-main"></i>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 		<div class="row mt-4">
